--- a/install
+++ b/install
@@ -46,7 +46,7 @@ source /opt/ros/$ROSDISTRO/setup.bash
 sudo apt-get install -y ros-$ROSDISTRO-freenect-launch
 sudo apt-get install -y ros-$ROSDISTRO-pointcloud-to-laserscan
 
-sudo apt-get install -y ros-$ROSDISTRO-moveit
+sudo apt-get install -y ros-$ROSDISTRO-moveit-full
 sudo apt-get install -y ros-$ROSDISTRO-robot-state-publisher
 sudo apt-get install -y ros-$ROSDISTRO-joint-state-publisher
 sudo apt-get install -y ros-$ROSDISTRO-trac-ik-kinematics-plugin
