--- a/install
+++ b/install
@@ -36,6 +36,7 @@ sudo apt-get install -y python-setuptools
 sudo apt-get install -y python-dev 
 sudo apt-get install -y build-essential
 sudo apt-get install -y python-gudev
+sudo apt-get install -y chrony
 
 sudo easy_install pip
 sudo pip install -U platformio
